added commands to be configurable in the config,

--- a/config/config.json
+++ b/config/config.json
@@ -41,5 +41,10 @@
     "WeaponsNotLogged": [
         "WEAPON_SNOWBALL",
         "WEAPON_FIREEXTINGUISHER"
-    ]
+    ],
+
+    "Commands": {
+        "logs": "LogHostoryCommand",
+        "screenshot": "ScreenshotCommand"
+    }
 }
