--- a/config/ac_config.json
+++ b/config/ac_config.json
@@ -43,7 +43,12 @@
         "chocolate",
         "panickey",
         "jolmany",
-        "killmenu"
+        "killmenu",
+        "pk",
+        "panik",
+        "lynx",
+        "brutan",
+        "saucy"
     ],
 
     "BlacklistedKeys": {
